Fixed Overlapping issue of home components , all good ..

--- a/src/index.css
+++ b/src/index.css
@@ -133,6 +133,15 @@ body {
   /* background-image: linear-gradient( to right ,#F6FDC3 , #FF8080); */
 }
 
+.hero .hero-content{
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  background-color: aqua;
+}
+
 .hero .left {
   position: relative;
   display: flex;
@@ -280,7 +289,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 50%;
-  height: 100%;
+  height: 80%;
   /* background-color: #fff; */
 }
 
@@ -310,10 +319,10 @@ body {
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
-  /* background-color: #00927d; */
+  background-color: #00927d;
   margin-top: 4%;
-  padding-bottom: 10%;
-  height: 80vh;
+  /* padding-bottom: 10%; */
+  height: max-content;
 }
 .hero .second-home .title {
   font-family:'Trebuchet MS', sans-serif;
@@ -329,6 +338,7 @@ body {
   height: 100%;
   /* background-color: chocolate; */
   padding: 0% 0% 2%;
+  margin-bottom: 2%;
 }
 
 /* =====================================Course Card home section================================== */
@@ -482,9 +492,9 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
-
+  
   margin-top: 2%;
-  /* background-color: chocolate; */
+  background-color: chocolate;
   padding: 4%;
   align-items: center;
 }
